--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "global": "^4.4.0",
+    "immer": "^5.0.0",
     "json-server": "^0.15.1",
     "polished": "^3.4.2",
     "react": "^16.12.0",
@@ -13,6 +14,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactotron-react-js": "^3.3.6",
+    "reactotron-redux": "^3.1.2",
     "redux": "^4.0.4",
     "styled-components": "^4.4.1"
   },
